--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.1",
+    "apexcharts": "^4.7.0",
+    "primevue": "^4.3.6",
     "vue": "^3.5.13"
   },
   "devDependencies": {
