--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.1",
     "apexcharts": "^4.7.0",
+    "axios": "^1.10.0",
     "primevue": "^4.3.6",
     "vue": "^3.5.13"
   },
