--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "apexcharts": "^4.7.0",
     "axios": "^1.10.0",
     "primevue": "^4.3.6",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
