--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@primeuix/themes": "^1.2.1",
     "apexcharts": "^4.7.0",
     "axios": "^1.10.0",
+    "package.json": "^0.0.0",
     "primevue": "^4.3.6",
     "vue": "^3.5.13",
     "vue3-apexcharts": "^1.8.0"
