--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "package.json": "^0.0.0",
     "primevue": "^4.3.6",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
     "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
