--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^4.7.0",
     "axios": "^1.10.0",
     "package.json": "^0.0.0",
+    "pinia": "^3.0.3",
     "primevue": "^4.3.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
